@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2020-2022 Michael Clarke
+ * Copyright (C) 2020-2024 Michael Clarke
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
@@ -18,12 +18,25 @@
  */
 package com.github.mc1arke.sonarqube.plugin.ce.pullrequest.github;
 
-import com.github.mc1arke.sonarqube.plugin.almclient.github.GithubClient;
+import java.io.IOException;
+import java.time.Clock;
+import java.util.Date;
+import java.util.List;
+import java.util.Optional;
+
+import org.kohsuke.github.GHCheckRun;
+import org.kohsuke.github.GHCheckRunBuilder;
+import org.kohsuke.github.GHIssueComment;
+import org.kohsuke.github.GHPullRequest;
+import org.kohsuke.github.GHRepository;
+import org.kohsuke.github.GitHub;
+import org.sonar.api.ce.posttask.QualityGate;
+import org.sonar.api.rule.Severity;
+import org.sonar.db.alm.setting.ALM;
+import org.sonar.db.alm.setting.AlmSettingDto;
+import org.sonar.db.alm.setting.ProjectAlmSettingDto;
+
 import com.github.mc1arke.sonarqube.plugin.almclient.github.GithubClientFactory;
-import com.github.mc1arke.sonarqube.plugin.almclient.github.model.Annotation;
-import com.github.mc1arke.sonarqube.plugin.almclient.github.model.CheckRunDetails;
-import com.github.mc1arke.sonarqube.plugin.almclient.github.v4.model.CheckAnnotationLevel;
-import com.github.mc1arke.sonarqube.plugin.almclient.github.v4.model.CheckConclusionState;
 import com.github.mc1arke.sonarqube.plugin.ce.pullrequest.AnalysisDetails;
 import com.github.mc1arke.sonarqube.plugin.ce.pullrequest.DecorationResult;
 import com.github.mc1arke.sonarqube.plugin.ce.pullrequest.PostAnalysisIssueVisitor;
@@ -31,19 +44,6 @@ import com.github.mc1arke.sonarqube.plugin.ce.pullrequest.PullRequestBuildStatus
 import com.github.mc1arke.sonarqube.plugin.ce.pullrequest.markup.MarkdownFormatterFactory;
 import com.github.mc1arke.sonarqube.plugin.ce.pullrequest.report.AnalysisSummary;
 import com.github.mc1arke.sonarqube.plugin.ce.pullrequest.report.ReportGenerator;
-import org.sonar.api.ce.posttask.QualityGate;
-import org.sonar.api.rule.Severity;
-import org.sonar.db.alm.setting.ALM;
-import org.sonar.db.alm.setting.AlmSettingDto;
-import org.sonar.db.alm.setting.ProjectAlmSettingDto;
-
-import java.time.Clock;
-import java.time.ZoneId;
-import java.time.ZonedDateTime;
-import java.util.Collections;
-import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 public class GithubPullRequestDecorator implements PullRequestBuildStatusDecorator {
 
@@ -63,34 +63,14 @@ public class GithubPullRequestDecorator implements PullRequestBuildStatusDecorat
     @Override
     public DecorationResult decorateQualityGateStatus(AnalysisDetails analysisDetails, AlmSettingDto almSettingDto,
                                           ProjectAlmSettingDto projectAlmSettingDto) {
-        AnalysisSummary analysisSummary = reportGenerator.createAnalysisSummary(analysisDetails);
-
-        CheckRunDetails checkRunDetails = CheckRunDetails.builder()
-                .withAnnotations(analysisDetails.getScmReportableIssues().stream()
-                        .map(GithubPullRequestDecorator::createAnnotation)
-                        .collect(Collectors.toList()))
-                .withCheckConclusionState(analysisDetails.getQualityGateStatus() == QualityGate.Status.OK ? CheckConclusionState.SUCCESS : CheckConclusionState.FAILURE)
-                .withCommitId(analysisDetails.getCommitSha())
-                .withSummary(analysisSummary.format(markdownFormatterFactory))
-                .withDashboardUrl(analysisSummary.getDashboardUrl())
-                .withPullRequestId(Integer.parseInt(analysisDetails.getPullRequestId()))
-                .withStartTime(analysisDetails.getAnalysisDate().toInstant().atZone(ZoneId.of("UTC")))
-                .withEndTime(ZonedDateTime.now(clock))
-                .withExternalId(analysisDetails.getAnalysisId())
-                .withName(String.format("%s Sonarqube Results", analysisDetails.getAnalysisProjectName()))
-                .withTitle("Quality Gate " + (analysisDetails.getQualityGateStatus() == QualityGate.Status.OK ? "success" : "failed"))
-                .withProjectKey(analysisDetails.getAnalysisProjectKey())
-                .build();
-
         try {
-            GithubClient githubClient = githubClientFactory.createClient(projectAlmSettingDto, almSettingDto);
+            GitHub github = githubClientFactory.createClient(almSettingDto, projectAlmSettingDto);
+            GHRepository repository = github.getRepository(projectAlmSettingDto.getAlmRepo());
 
-            githubClient.createCheckRun(checkRunDetails,
-                            Optional.ofNullable(projectAlmSettingDto.getSummaryCommentEnabled())
-                                    .orElse(false));
+            GHPullRequest pullRequest = createCheckRun(repository,  analysisDetails, Optional.ofNullable(projectAlmSettingDto.getSummaryCommentEnabled()).orElse(false));
 
             return DecorationResult.builder()
-                    .withPullRequestUrl(githubClient.getRepositoryUrl() + "/pull/" + checkRunDetails.getPullRequestId())
+                    .withPullRequestUrl(pullRequest.getHtmlUrl().toExternalForm())
                     .build();
         } catch (Exception ex) {
             throw new IllegalStateException("Could not decorate Pull Request on Github", ex);
@@ -100,28 +80,67 @@ public class GithubPullRequestDecorator implements PullRequestBuildStatusDecorat
 
     @Override
     public List<ALM> alm() {
-        return Collections.singletonList(ALM.GITHUB);
+        return List.of(ALM.GITHUB);
     }
 
-    private static Annotation createAnnotation(PostAnalysisIssueVisitor.ComponentIssue componentIssue) {
-        return Annotation.builder()
-                .withLine(Optional.ofNullable(componentIssue.getIssue().getLine()).orElse(0))
-                .withScmPath(componentIssue.getScmPath().orElseThrow())
-                .withMessage(Optional.ofNullable(componentIssue.getIssue().getMessage()).orElseThrow().replace("\\","\\\\").replace("\"", "\\\""))
-                .withSeverity(mapToGithubAnnotationLevel(componentIssue.getIssue().severity()))
-                .build();
+
+    private GHPullRequest createCheckRun(GHRepository repository, AnalysisDetails analysisDetails, boolean postSummaryComment) throws IOException {
+        AnalysisSummary analysisSummary = reportGenerator.createAnalysisSummary(analysisDetails);
+        String summary = analysisSummary.format(markdownFormatterFactory);
+
+        GHCheckRunBuilder.Output output = new GHCheckRunBuilder.Output("Quality Gate " + (analysisDetails.getQualityGateStatus() == QualityGate.Status.OK ? "success" : "failed"), summary);
+        for (PostAnalysisIssueVisitor.ComponentIssue componentIssue : analysisDetails.getScmReportableIssues()) {
+            output.add(new GHCheckRunBuilder.Annotation(
+                componentIssue.getScmPath().orElseThrow(),
+                Optional.ofNullable(componentIssue.getIssue().getLine()).orElse(0),
+                mapToGithubAnnotationLevel(componentIssue.getIssue().severity()),
+                Optional.ofNullable(componentIssue.getIssue().getMessage()).orElseThrow())
+            );
+        }
+
+        repository.createCheckRun(String.format("%s Sonarqube Results", analysisDetails.getAnalysisProjectName()), analysisDetails.getCommitSha())
+            .withStartedAt(analysisDetails.getAnalysisDate())
+            .withCompletedAt(Date.from(clock.instant()))
+            .withStatus(GHCheckRun.Status.COMPLETED)
+            .withConclusion(analysisDetails.getQualityGateStatus() == QualityGate.Status.OK ? GHCheckRun.Conclusion.SUCCESS : GHCheckRun.Conclusion.FAILURE)
+            .withDetailsURL(analysisSummary.getDashboardUrl())
+            .withExternalID(analysisDetails.getAnalysisId())
+            .add(output)
+            .create();
+
+        GHPullRequest pullRequest = repository.getPullRequest(Integer.parseInt(analysisDetails.getPullRequestId()));
+        if (postSummaryComment) {
+            postSummaryComment(pullRequest, summary, analysisDetails.getAnalysisProjectKey());
+        }
+        return pullRequest;
     }
 
-    private static CheckAnnotationLevel mapToGithubAnnotationLevel(String sonarqubeSeverity) {
+    private void postSummaryComment(GHPullRequest pullRequest, String summary, String projectId) throws IOException {
+        String projectCommentMarker = String.format("**Project ID:** %s", projectId);
+
+        GHIssueComment summaryComment = pullRequest.comment(summary);
+
+        for (GHIssueComment comment : pullRequest.getComments()) {
+            if ("Bot".equalsIgnoreCase(comment.getUser().getType())
+                && summaryComment.getUser().getId() == comment.getUser().getId()
+                && (comment.getBody().contains(projectCommentMarker + "\n") || comment.getBody().contains(projectCommentMarker + "\r"))
+                && comment.getId() != summaryComment.getId()) {
+                comment.delete();
+            }
+        }
+
+    }
+
+    private static GHCheckRun.AnnotationLevel mapToGithubAnnotationLevel(String sonarqubeSeverity) {
         switch (sonarqubeSeverity) {
             case Severity.INFO:
-                return CheckAnnotationLevel.NOTICE;
+                return GHCheckRun.AnnotationLevel.NOTICE;
             case Severity.MINOR:
             case Severity.MAJOR:
-                return CheckAnnotationLevel.WARNING;
+                return GHCheckRun.AnnotationLevel.WARNING;
             case Severity.CRITICAL:
             case Severity.BLOCKER:
-                return CheckAnnotationLevel.FAILURE;
+                return GHCheckRun.AnnotationLevel.FAILURE;
             default:
                 throw new IllegalArgumentException("Unknown severity value: " + sonarqubeSeverity);
         }
